fjord-compiler/test/errors/UndefinedOperator.fj
module test.errors.UndefinedOperator

undefinedOp : Int -> Int
undefinedOp a = a ++ 1
